# peelo-xdg

./: CMakeLists.txt  Doxyfile  LICENSE.md  README.md  dir_30bb860588f86a592f62c1b922374aed.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  index.html  namespacemembers.html  namespacemembers_func.html  namespacepeelo.html  namespacepeelo_1_1xdg.html  namespaces.html  xdg_8hpp.html  xdg_8hpp_source.html
.github/workflows/: build.yml
include/peelo/: xdg.hpp
test/: CMakeLists.txt  test_multiple_paths.cpp  test_single_paths.cpp
